--- a/ooiui/static/css/custom/banner.css
+++ b/ooiui/static/css/custom/banner.css
@@ -18,7 +18,7 @@
 /* ~ adjust #wrapper & #page-content-wrapper for content below the banner & navbar ~ */ 
 div#wrapper {
   margin-top: 185px;
-  padding-left: 296px;
+  padding-left: 375px;
 }
 
 div#gloss-wrapper {
